Fix styling so nav buttons are visible

--- a/components/network/Network.module.scss
+++ b/components/network/Network.module.scss
@@ -1,5 +1,6 @@
 .graph {
 	height: 100vh;
+	margin-left: 18.75rem;
 
 	* {
 		outline: none;
